Added overlay description

--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -46,7 +46,7 @@
                 <img width="220" height="200" src="/images/videoproduction/VP1.jpg" alt="VP1.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Filming Intern Video'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -59,7 +59,7 @@
                 <img width="220" height="200" src="/images/videoproduction/VP2.jpg" alt="VP2.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Til' Death Do Us Part Filming'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -72,7 +72,7 @@
                 <img width="220" height="200" src="/images/videoproduction/VP3.JPG" alt="VP3.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Stop Bulling for Everyone Filming'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -85,7 +85,7 @@
                 <img width="220" height="200" src="/images/videoproduction/VP4.JPG" alt="VP4.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Filming Welcome Message'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -98,7 +98,7 @@
                 <img width="220" height="200" src="/images/videoproduction/VP5.JPG" alt="VP5.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Filming Intern Video'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -111,7 +111,7 @@
                 <img width="220" height="200" src="/images/videoproduction/VP6.jpg" alt="VP6.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Til' Death Do Us Part Filming'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -124,7 +124,7 @@
                 <img width="220" height="200" src="/images/videoproduction/VP7.jpg" alt="VP7.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Til' Death Do Us Part Filming'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -137,7 +137,7 @@
                 <img width="220" height="200" src="/images/videoproduction/VP8.JPG" alt="VP8.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Editing Videos'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -156,7 +156,7 @@
                 <img width="220" height="200" src="/images/internship/Internship1.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Graphic Design Presentation'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -169,7 +169,7 @@
                 <img width="220" height="200" src="/images/internship/Internship2.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Marketing Presentation'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -182,7 +182,7 @@
                 <img width="220" height="200" src="/images/internship/Internship3.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Conference Presentation'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
                 <img width="220" height="200" src="/images/internship/Internship4.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Intern Fair'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -208,7 +208,7 @@
                 <img width="220" height="200" src="/images/internship/Internship5.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Interns 2017'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -221,7 +221,7 @@
                 <img width="220" height="200" src="/images/internship/Internship6.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'New Intern Orientation 2017'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                 <img width="220" height="200" src="/images/internship/Internship7.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'New Intern Orientation 2016'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -247,7 +247,7 @@
                 <img width="220" height="200" src="/images/internship/Internship8.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Field Trip to Los Angeles'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -265,7 +265,7 @@
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers1.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'John's Incredible Pizza 2016'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -278,7 +278,7 @@
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers2.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'John's Incredible Pizza 2017'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -291,7 +291,7 @@
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers3.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'John's Incredible Pizza 2017'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -304,7 +304,7 @@
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers4.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'SAFE Table for Fundraisers'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -317,7 +317,7 @@
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers5.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'John's Incredible Pizza 2016'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -330,7 +330,7 @@
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers6.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Handing out Fundraising Flyers'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -343,7 +343,7 @@
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers7.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Riverlakes Fundraiser'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -356,7 +356,7 @@
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers8.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Riverlakes Fundraiser'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -397,7 +397,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/speakersbureau/Speakers3.jpg" alt="">
+                <img width="220" height="200" src="/images/speakersbureau/Don.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">''</h2>
@@ -410,7 +410,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/speakersbureau/Speakers4.jpeg" alt="">
+                <img width="220" height="200" src="/images/speakersbureau/Patrick.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">''</h2>
@@ -423,7 +423,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/speakersbureau/Speakers5.jpeg" alt="">
+                <img width="220" height="200" src="/images/speakersbureau/Phil.png" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">''</h2>
@@ -436,7 +436,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/speakersbureau/Speakers6.jpeg" alt="">
+                <img width="220" height="200" src="/safe1/images/john_hammel.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">''</h2>
@@ -641,7 +641,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-700">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/advocacy/IMG_1636.JPG" alt="">
+                <img width="220" height="200" src="/images/advocacy/unnamed-10 (1).jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">''</h2>
