--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -43,7 +43,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-2" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/videoproduction/VP1.jpg" alt="VP1.jpg">
+                <img width="220" height="200" src="/images/videoproduction/Gabe.jpg" alt="Gabe">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'Filming Intern Video'</h2>
@@ -95,7 +95,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-450">
               <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/videoproduction/VP5.JPG" alt="VP5.JPG">
+                <img width="220" height="200" src="/images/videoproduction/TJ.jpg" alt="TJ">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'Filming Intern Video'</h2>
@@ -153,7 +153,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade">
               <a class="uk-overlay" href="#modal-1" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/internship/Internship1.JPG">
+                <img width="204" height="153" src="/images/internship/unnamed.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'Graphic Design Presentation'</h2>
@@ -166,7 +166,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-2" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/internship/Internship2.JPG">
+                <img width="204" height="153" src="/images/internship/unnamed-2.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'Marketing Presentation'</h2>
@@ -205,7 +205,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-300">
               <a class="uk-overlay" href="#modal-5" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/internship/Internship5.JPG">
+                <img width="220" height="200" src="/images/internship/unnamed-1.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'Interns 2017'</h2>
@@ -231,7 +231,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-500">
               <a class="uk-overlay" href="#modal-7" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/internship/Internship7.jpg">
+                <img width="220" height="200" src="/images/internship/unnamed-3.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'New Intern Orientation 2016'</h2>
@@ -262,7 +262,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/fundraiser/Fundraisers1.jpg" alt="">
+                <img width="220" height="200" src="/images/fundraiser/unnamed-4.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'John's Incredible Pizza 2016'</h2>
@@ -314,7 +314,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/fundraiser/Fundraisers5.jpg" alt="">
+                <img width="220" height="200" src="/images/fundraiser/unnamed-5.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'John's Incredible Pizza 2016'</h2>
@@ -384,7 +384,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/images/unnamed-4.jpg" alt="Elizabeth">
+                <img width="220" height="200" src="/images/speakersbureau/Elizabeth.jpg" alt="Elizabeth">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">''</h2>
@@ -436,7 +436,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="220" height="200" src="/safe1/images/john_hammel.jpg" alt="">
+                <img width="220" height="200" src="/images/speakersbureau/John.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">''</h2>
@@ -445,7 +445,33 @@
                 </div>
               </a>
             </div>
-          </li>                                        
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="220" height="200" src="/images/speakersbureau/David.jpg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="220" height="200" src="/images/speakersbureau/Richard.jpg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>                                                            
         </ul>
       </li>      
 
