Updated overlay image
Note to developers: Github backup required every time changes are made to modules. Edits should be made based on the latest github backup.

--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -42,7 +42,7 @@
         <ul class="uk-grid uk-grid-width-small-1-2 uk-grid-width-large-1-4" data-uk-grid-margin="">
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-2" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-1-1" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/Gabe.jpg" alt="Gabe">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -55,7 +55,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-1-2" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/VP2.jpg" alt="VP2.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -68,7 +68,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-250">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-1-3" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/VP3.JPG" alt="VP3.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -153,7 +153,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade">
               <a class="uk-overlay" href="#modal-1" data-uk-modal="{center: true}">
-                <img width="204" height="153" src="/images/internship/unnamed.jpg">
+                <img width="204" height="153" src="/images/internship/presentation.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">'Graphic Design Presentation'</h2>
@@ -701,30 +701,30 @@
 <a class="uk-button uk-button-primary uk-margin-large-top" href="/safe1/index.php?option=com_beacart&view=frontpage">Our Store</a>
 
 
-<div id="modal-1" class="uk-modal">
+<div id="modal-1-1" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
-        <a href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>
-        <img width="220" height="200" src="/themes/joomla/2014/eat/images/yootheme/home_products_tea.jpg" alt="Black tea">
+        <a href="http://safe4all.biz/safe1/" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="900" height="600" src="/images/videoproduction/Gabe.jpg" alt="gabe">
     </div>
 </div>
 
-<div id="modal-2" class="uk-modal">
+<div id="modal-1-2" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
-        <a href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>
-        <img width="220" height="200" src="/themes/joomla/2014/eat/images/yootheme/home_products_pepper.jpg" alt="Pepper mix">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="900" height="600" src="/images/videoproduction/VP2.jpg" alt="VP2.jpg">
     </div>
 </div>
 
-<div id="modal-3" class="uk-modal">
-    <div class="uk-overlay-panel">
-        <a href="https://www.youtube.com/watch?v=2APiIwi8-5c" class="uk-modal-close uk-close uk-close-alt"></a>
+<div id="modal-1-3" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/videoproduction/VP3.JPG" alt="VP3.JPG">
     </div>
 </div>
 
 <div id="modal-4" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
-        <a class="uk-position-cover" href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>
-        
+        <a class="uk-position-cover" href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>    
     </div>
 </div>
 
