Updated videoproduction img overlay

--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -54,7 +54,7 @@
             </div>
           </li>
           <li class="uk-row-first">
-            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-100">
               <a class="uk-overlay" href="#modal-1-2" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/VP2.jpg" alt="VP2.jpg">
                 <div class="uk-overlay-area">
@@ -81,7 +81,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-350">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-1-4" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/VP4.JPG" alt="VP4.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -94,7 +94,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-450">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-1-5" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/TJ.jpg" alt="TJ">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -107,7 +107,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-550">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-1-6" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/VP6.jpg" alt="VP6.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -120,7 +120,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-650">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-1-7" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/VP7.jpg" alt="VP7.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -133,7 +133,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-750">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-1-8" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/videoproduction/VP8.JPG" alt="VP8.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -722,37 +722,38 @@
     </div>
 </div>
 
-<div id="modal-4" class="uk-modal">
+<div id="modal-1-4" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
-        <a class="uk-position-cover" href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>    
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/videoproduction/VP4.JPG" alt="VP4.JPG">
     </div>
 </div>
 
-<div id="modal-5" class="uk-modal">
+<div id="modal-1-5" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
-        <a href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>
-        <img width="220" height="200" src="/themes/joomla/2014/eat/images/yootheme/home_products_coffee.jpg" alt="">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/videoproduction/TJ.jpg" alt="TJ.jpg">
     </div>
 </div>
 
-<div id="modal-6" class="uk-modal">
+<div id="modal-1-6" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
-        <a href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>
-        <img width="220" height="200" src="/themes/joomla/2014/eat/images/yootheme/home_products_cookies.jpg" alt="Chocolate chip cookies">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/videoproduction/VP6.jpg" alt="VP6.JPG">
     </div>
 </div>
 
-<div id="modal-7" class="uk-modal">
+<div id="modal-1-7" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
-        <a href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>
-        <img width="220" height="200" src="/themes/joomla/2014/eat/images/yootheme/home_products_chocolate.jpg" alt="Chocolate pralines">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/videoproduction/VP7.jpg" alt="VP7.jpg">
     </div>
 </div>
 
-<div id="modal-8" class="uk-modal">
+<div id="modal-1-8" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
-        <a href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>
-        <img width="220" height="200" src="/themes/joomla/2014/eat/images/yootheme/home_products_spices.jpg" alt="Spice selection">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/videoproduction/VP8.JPG" alt="VP8.JPG">
     </div>
 </div>
 
