Updated fundraiser img overlay

--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -152,7 +152,7 @@
         <ul class="uk-grid uk-grid-width-small-1-2 uk-grid-width-large-1-4" data-uk-grid-margin="">
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade">
-              <a class="uk-overlay" href="#modal-1" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-2-1" data-uk-modal="{center: true}">
                 <img width="204" height="153" src="/images/internship/presentation.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -165,7 +165,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-2" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-2-2" data-uk-modal="{center: true}">
                 <img width="204" height="153" src="/images/internship/unnamed-2.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -178,7 +178,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-100">
-              <a class="uk-overlay" href="#modal-3" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-2-3" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/internship/Internship3.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -191,7 +191,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-200">
-              <a class="uk-overlay" href="#modal-4" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-2-4" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/internship/Internship4.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -204,7 +204,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-300">
-              <a class="uk-overlay" href="#modal-5" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-2-5" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/internship/unnamed-1.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -217,7 +217,7 @@
           </li> 
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-400">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-2-6" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/internship/Internship6.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -230,7 +230,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-500">
-              <a class="uk-overlay" href="#modal-7" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-2-7" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/internship/unnamed-3.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -243,7 +243,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-600">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-2-8" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/internship/Internship8.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -261,7 +261,7 @@
         <ul class="uk-grid uk-grid-width-small-1-2 uk-grid-width-large-1-4" data-uk-grid-margin="">
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-3-1" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/fundraiser/unnamed-4.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -274,7 +274,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-3-2" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers2.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -287,7 +287,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-3-3" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers3.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -300,7 +300,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-3-4" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers4.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -313,7 +313,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-3-5" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/fundraiser/unnamed-5.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -326,7 +326,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-3-6" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers6.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -339,7 +339,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-3-7" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers7.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -352,7 +352,7 @@
           </li>
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
-              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+              <a class="uk-overlay" href="#modal-3-8" data-uk-modal="{center: true}">
                 <img width="220" height="200" src="/images/fundraiser/Fundraisers8.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
@@ -756,6 +756,125 @@
         <img width="700" height="500" src="/images/videoproduction/VP8.JPG" alt="VP8.JPG">
     </div>
 </div>
+
+/* internship modal */
+
+<div id="modal-2-1" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1/" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="900" height="600" src="/images/internship/presentation.jpg">
+    </div>
+</div>
+
+<div id="modal-2-2" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="900" height="600" src="/images/internship/unnamed-2.jpg">
+    </div>
+</div>
+
+<div id="modal-2-3" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/internship/Internship3.jpg">
+    </div>
+</div>
+
+<div id="modal-2-4" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/internship/Internship4.jpg">
+    </div>
+</div>
+
+<div id="modal-2-5" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/internship/unnamed-1.jpg">
+    </div>
+</div>
+
+<div id="modal-2-6" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/internship/Internship6.jpg">
+    </div>
+</div>
+
+<div id="modal-2-7" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/internship/unnamed-3.jpg">
+    </div>
+</div>
+
+<div id="modal-2-8" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/internship/Internship8.jpg">
+    </div>
+</div>
+
+/* end of internship modal */
+/* fundraiser modal */
+
+<div id="modal-3-1" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1/" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="900" height="600" src="/images/fundraiser/unnamed-4.jpg" alt="">
+    </div>
+</div>
+
+<div id="modal-3-2" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="900" height="600" src="/images/fundraiser/Fundraisers2.JPG" alt="">
+    </div>
+</div>
+
+<div id="modal-3-3" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/fundraiser/Fundraisers3.JPG" alt="">
+    </div>
+</div>
+
+<div id="modal-3-4" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/fundraiser/Fundraisers4.JPG" alt="">
+    </div>
+</div>
+
+<div id="modal-3-5" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/fundraiser/unnamed-5.jpg" alt="">
+    </div>
+</div>
+
+<div id="modal-3-6" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/fundraiser/Fundraisers6.JPG" alt="">
+    </div>
+</div>
+
+<div id="modal-3-7" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/fundraiser/Fundraisers7.jpg" alt="">
+    </div>
+</div>
+
+<div id="modal-3-8" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-lightbox">
+        <a href="http://safe4all.biz/safe1" class="uk-modal-close uk-close uk-close-alt"></a>
+        <img width="700" height="500" src="/images/fundraiser/Fundraisers8.jpg" alt="">
+    </div>
+</div>
+
+/* end of fundraiser modal */
 
 </div></div>
 </section>
